--- a/mavenGittry3/pom.xml
+++ b/mavenGittry3/pom.xml
@@ -20,6 +20,9 @@
   
 </distributionManagement>
 
+<scm>
+<connection>scm:git:https://github.com/shivangikanodia21/gitmaventry3.git</connection>
+</scm>
 
   
    <build>
