--- a/mavenGittry3/pom.xml
+++ b/mavenGittry3/pom.xml
@@ -21,7 +21,7 @@
 </distributionManagement>
 
 <scm>
-<connection>scm:git:https://github.com/shivangikanodia21/gitmaventry3.git</connection>
+<connection>scm:git:https://github.com/shivangikanodia21/gitmaven3.1.git</connection>
 </scm>
 
   
